--- a/P2:Sorted File/src/Makefile
+++ b/P2:Sorted File/src/Makefile
@@ -1,4 +1,5 @@
-CC = g++ -O2 -Wno-deprecated 
+
+CC = g++ -O2 -Wno-deprecated
 
 tag = -i
 
@@ -6,30 +7,30 @@ ifdef linux
 tag = -n
 endif
 
-dbfile_test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o dbfile_test.o
-	$(CC) -o dbfile_test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o dbfile_test.o -lfl -lpthread -lgtest
-
-test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o test.o
-	$(CC) -o test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o test.o -lfl
+test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o BigQ.o DBFile.o Pipe.o y.tab.o lex.yy.o test.o
+	$(CC) -o test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o BigQ.o DBFile.o Pipe.o y.tab.o lex.yy.o test.o -lfl -lpthread
 	
-main: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o main.o
-	$(CC) -o main Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o y.tab.o lex.yy.o main.o -lfl
-
-dbfile_test.o: dbfile_test.cc
-	$(CC) -g -c dbfile_test.cc
-
+a1test.out: Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o Pipe.o y.tab.o lex.yy.o a1-test.o
+	$(CC) -o a1test.out Record.o Comparison.o ComparisonEngine.o Schema.o File.o DBFile.o Pipe.o y.tab.o lex.yy.o a1-test.o -lfl
+	
 test.o: test.cc
 	$(CC) -g -c test.cc
 
-main.o: main.cc
-	$(CC) -g -c main.cc
-	
+a1-test.o: a1-test.cc
+	$(CC) -g -c a1-test.cc
+
 Comparison.o: Comparison.cc
 	$(CC) -g -c Comparison.cc
 	
 ComparisonEngine.o: ComparisonEngine.cc
 	$(CC) -g -c ComparisonEngine.cc
 	
+Pipe.o: Pipe.cc
+	$(CC) -g -c Pipe.cc
+
+BigQ.o: BigQ.cc
+	$(CC) -g -c BigQ.cc
+
 DBFile.o: DBFile.cc
 	$(CC) -g -c DBFile.cc
 
